# todo-list

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  server.rs
src-tauri/: Cargo.toml
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
static/: app.js  index.html  style.css
