[package]
name = "task_manager"
version = "0.1.0"
edition = "2024"

[lib]
name = "task_manager_lib"
path = "src/lib.rs"

[[bin]]
name = "taskflow"
path = "src/main.rs"

[[bin]]
name = "task_manager"
path = "src/server.rs"

[dependencies]
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
tower-http = { version = "0.6", features = ["fs", "cors"] }
zip = "2"
